# playwright_service

./: Dockerfile  README.md  README.txt  docker-compose.yaml  dump.rdb  pyproject.toml  screenshots.db
app/: celery_config.py  config.py  main.py  models.py  routes.py  schemas.py  services.py  tasks.py
