[tool.poetry]
name = "edited-solution"
version = "0.1.0"
description = ""
authors = ["magdalenaivanova <magdalena.ivanovaa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.24.0"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
sqlalchemy = "^2.0.30"
aiosqlite = "^0.20.0"
playwright = "^1.44.0"
celery = {extras = ["redis"], version = "^5.4.0"}
redis = "^5.0.4"
nest-asyncio = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
